--- a/client/static/css/custom.css
+++ b/client/static/css/custom.css
@@ -1,5 +1,7 @@
-footer.page-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+html {
+    height: 100%;
 }
+body {
+    height: 100%;
+}
+
