--- a/client/static/css/custom.css
+++ b/client/static/css/custom.css
@@ -1,7 +1,8 @@
-html {
-    height: 100%;
+html, body {
+  height: 100%;
+  margin: 0;
 }
-body {
-    height: 100%;
+#placeHolder img {
+    height: 200px;
+    width: 200px;
 }
-
