--- a/client/static/css/custom.css
+++ b/client/static/css/custom.css
@@ -6,3 +6,17 @@ html, body {
     height: 200px;
     width: 200px;
 }
+.introduction {
+    height:100vh;
+    width: 100%;
+    background: url('../images/header.jpg') no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: relative;
+    background: #3F729B;
+}
+.intro-container {
+    padding-top: 200px;
+}
